# mirea-tests-2

./: pyproject.toml
circle/: circle.py  test_circle.py
person/: person.py  test_person.py
triangle/: test_triangle.py  triangle.py
vector/: test_vector.py  vector.py
